--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-flask==2.0.1
-flask-cors==3.0.10
-numpy==1.21.0
-scikit-learn==0.24.2
-joblib==1.0.1
+Flask==2.3.3
+Flask-Cors==4.0.0
+Werkzeug==2.3.7
+python-dotenv==1.0.0
+requests==2.31.0
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+pytest==7.4.2
+gunicorn==21.2.0
 python-dateutil==2.8.2
-pandas>=1.3.0
-gunicorn==20.1.0
-greenlet==2.0.2
-Werkzeug==2.0.3 
+pytz==2023.3
+logging==0.5.1.2
